--- a/src/assets/styles/Header.module.css
+++ b/src/assets/styles/Header.module.css
@@ -3,9 +3,9 @@
   justify-content: space-between;
   gap: 38px;
   padding-top: 20px;
-  padding-right: 130px;
+  padding-right: 5%;
   padding-bottom: 20px;
-  padding-left: 130px;
+  padding-left: 5%;
   align-items: center;
 }
 
