--- a/src/assets/styles/Home.module.css
+++ b/src/assets/styles/Home.module.css
@@ -135,6 +135,15 @@
   text-align: center;
   margin: 0;
 }
+.uniListContainer2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 90px;
+  padding-bottom: 60px;
+  background-color: rgba(248, 255, 253, 1);
+
+}
 
 .uniListContainer h1 {
   font-family: "Poppins";
@@ -159,8 +168,8 @@
   height: 311px;
   gap: 40px;
   border-radius: 20px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
 }
 .ourFeatureParag {
@@ -202,6 +211,6 @@
 }
 
 .studDiv {
-  width: 100%;
+  width: 100vw;
 }
 /*  */
