--- a/src/assets/styles/university.module.css
+++ b/src/assets/styles/university.module.css
@@ -52,20 +52,20 @@
 /* Основные стили контейнера фильтра */
 .filterBox {
   position: relative;
-  width: 100%;
-  max-width: 1280px;
+  width: 90%;
   min-height: 317px;
   border-radius: 20px;
   padding: 24px 48px;
   background-color: rgba(229, 244, 242, 1);
   margin: 40px auto;
+
 }
 
 /* Стили для блока фильтров */
 .filter {
   display: flex;
+  gap: 11%;
   justify-content: space-between;
-  gap: 20px;
 }
 
 /* Кнопка "Apply Filters" */
@@ -91,6 +91,7 @@
   align-items: center;
   gap: 8px;
   margin-bottom: 15px;
+  width: 23%;
 }
 
 .filterTitle p {
@@ -106,6 +107,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  
 }
 
 .checkboxStyle[type="checkbox"] {
