--- a/src/assets/styles/Header.module.css
+++ b/src/assets/styles/Header.module.css
@@ -9,7 +9,6 @@
   align-items: center;
 }
 
-
 .navbar .logo {
   font-family: "Rubik", sans-serif;
   font-weight: 500;
@@ -38,3 +37,74 @@ header hr {
   color: #009379;
 }
 
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  background: none;
+  border: none;
+  gap: 5px;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: #009379;
+  border-radius: 2px;
+}
+.authIcons {
+  display: flex;
+  gap: 38px;
+}
+.humburger {
+  cursor: pointer;
+  display: none;
+}
+@media (max-width: 768px) {
+  .humburger {
+    display: flex;
+  }
+  .navigation {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 1000;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    display: none;
+    overflow-y: auto;
+    pointer-events: auto;
+
+    border-radius: 16px;
+    padding-top: 20px;
+    padding-right: 16px;
+    padding-bottom: 20px;
+    padding-left: 16px;
+  }
+
+  .navigation.open {
+    display: flex;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+  .navbar {
+    flex-wrap: wrap;
+  }
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 999;
+}
