--- a/src/assets/styles/Login.module.css
+++ b/src/assets/styles/Login.module.css
@@ -77,7 +77,7 @@
   align-items: start;
 }
 .welcomeLoginIcon {
-  width: 424px;
+  width: 500px;
   height: 424px;
 }
 
@@ -97,7 +97,6 @@
   line-height: 30px;
   letter-spacing: 0%;
   width: 473px;
-  height: 60px;
 }
 
 .forgotPassLink {
@@ -124,6 +123,8 @@
 
 .donthaveAAcc {
   margin-left: 20%;
+}
+.forgotEnterEmail {
   color: rgba(166, 166, 166, 1);
 }
 .signUpLink {
@@ -196,6 +197,7 @@
   color: #718096;
   text-align: center;
 }
+
 .resendCode span {
   color: #141416;
   cursor: pointer;
@@ -237,9 +239,113 @@
   cursor: pointer;
 }
 
-
 .error {
   font-size: 13px;
   color: red;
   margin-top: 10px;
+}
+
+@media (max-width: 999px) {
+  .mainBox {
+    flex-direction: column;
+  }
+  .backgroundDarker {
+    background-color: rgba(45, 45, 45, 0.5);
+    position: absolute;
+    width: 100%;
+    height: fit-content;
+    z-index: 1000;
+    height: 100%;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: start;
+    padding: 100px;
+    gap: 20px;
+  }
+
+  .backgroundDarker p {
+    width: 90%;
+  }
+  .loginLeftSide,
+  .loginRightSide,
+  .loginRightSideForSignUp,
+  .signupLeft,
+  .signupRight {
+    width: 100%;
+    height: auto;
+    min-height: 50vh;
+    padding: 20px;
+  }
+
+  .contentleftSide,
+  .contentrightSide,
+  .contentrightSideConfirm,
+  .signupcontentrightSide {
+    padding-top: 10%;
+    align-items: center;
+    text-align: center;
+  }
+
+  .greeting {
+    width: 100%;
+    font-size: 40px;
+    line-height: 36px;
+    height: auto;
+  }
+
+  .BtnLong {
+    width: 100%;
+    height: 50px;
+    font-size: 14px;
+    border-radius: 15px;
+  }
+
+  .welcomeLoginIcon {
+    position: absolute;
+    width: 90%;
+    top: 0;
+  }
+
+  .codeInput {
+    width: 48px;
+    height: 48px;
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+  .forgotPassLink,
+  .atLeast8char {
+    position: static;
+    margin: 10px 0;
+    text-align: center;
+    font-size: 12px;
+  }
+
+  .donthaveAAcc {
+    margin: 10px 0;
+    text-align: center;
+  }
+
+  .logo {
+    top: 20px;
+    left: 20px;
+    width: 80px;
+    height: 30px;
+  }
+
+  .termspan {
+    font-size: 12px;
+  }
+
+  .createAccParagraph {
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .resendCode {
+    font-size: 14px;
+  }
 }
