--- a/src/assets/styles/Profile.module.css
+++ b/src/assets/styles/Profile.module.css
@@ -1,9 +1,12 @@
 .personalInfoSection {
   margin-top: 0;
-  padding-top: 90px;
-  height: 789px;
+  padding-top: 60px;
+  padding-left: 16px;
+  padding-right: 16px;
+  min-height: 100vh;
   background-color: rgba(248, 255, 253, 1);
-  padding-left: 20%;
+  display: flex;
+  justify-content: center;
 }
 p,
 h2 {
@@ -20,6 +23,7 @@ h1 {
   display: flex;
   flex-direction: column;
 }
+
 .profilePic {
   width: 100px;
   height: 100px;
@@ -45,7 +49,8 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  width: 1060px;
+  background-color: rgba(248, 255, 253, 1);
+  width: 100%;
 }
 .inputBox p {
   font-weight: 400;
@@ -55,7 +60,7 @@ h1 {
   color: rgba(45, 45, 45, 1);
 }
 .inputYourInfo {
-  width: 500px;
+  width: 100%;
   height: 60px;
   gap: 12px;
   border-radius: 20px;
@@ -67,14 +72,27 @@ h1 {
   padding-left: 20px;
   color: rgba(45, 45, 45, 1);
   margin-bottom: 32px;
+  box-sizing: border-box;
 }
 
 .inputPassword {
   width: 100% !important;
+  margin-top: 30px;
 }
 .infoUpdateSection {
-  display: grid;
-  grid-template-columns: repeat(2, 540px);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.selectingthecat {
+}
+
+@media (min-width: 768px) {
+  .infoUpdateSection {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 20px;
+  }
 }
 .h1Title {
   font-family: "DM Sans";
@@ -86,18 +104,29 @@ h1 {
   margin-top: 90px;
 }
 .box {
-  width: fit-content;
+  width: 100%;
+  max-width: 1080px;
+  padding: 0 16px;
+  height: fit-content;
+  box-sizing: border-box;
   position: relative;
-  width: 73%;
 }
 .updBtns {
   position: absolute;
   display: flex;
-  right: 25px;
+  justify-content: center;
+  margin-top: 32px;
   gap: 16px;
-  bottom: -90px;
 }
 
+@media (min-width: 768px) {
+  .updBtns {
+    position: absolute;
+    right: 0px;
+    bottom: -90px;
+    justify-content: flex-end;
+  }
+}
 .cancel {
   font-family: "Poppins";
   font-weight: 600;
@@ -111,17 +140,24 @@ h1 {
 
 .container {
   display: flex;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  gap: 386px; /* Min 100px, Max 386px */
+  flex-direction: row;
+  align-items: center;
+  gap: 16px;
+}
+
+@media (min-width: 768px) {
+  .container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 .pcontainer {
   width: 168px;
 }
 
 .mainLoginandsecuritySection {
-  padding-left: 20%;
+  display: flex;
+  justify-content: center;
 }
 
 .popupOverlay {
@@ -156,3 +192,57 @@ h1 {
   cursor: pointer;
   color: red;
 }
+
+.setAvatarDiv {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 200;
+}
+
+.setAvatarContent {
+  background: white;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 16px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  width: 40%;
+  height: fit-content;
+  text-align: center;
+}
+
+.avatarsPick {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.cancelForAvatar {
+  font-family: "Poppins";
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: rgba(0, 147, 121, 1);
+  cursor: pointer;
+}
+
+.imgSkeleton {
+  width: 100px;
+  height: 100px;
+  background-color: #f0f0f0;
+  border-radius: 50%;
+}
+
+.hidden {
+  display: none;
+}
+
