--- a/src/assets/styles/university.module.css
+++ b/src/assets/styles/university.module.css
@@ -29,6 +29,8 @@
   height: 60px;
   gap: 20px;
   margin: 90px auto;
+  padding-left: 18px;
+  padding-right: 18px;
 }
 
 .searchInput {
@@ -58,9 +60,10 @@
   padding: 24px 48px;
   background-color: rgba(229, 244, 242, 1);
   margin: 40px auto;
-
 }
-
+.filterContentWidth {
+  width: 23%;
+}
 /* Стили для блока фильтров */
 .filter {
   display: flex;
@@ -106,15 +109,15 @@
 .checkboxDiv {
   display: flex;
   align-items: center;
+  width: fit-content;
   gap: 10px;
-  
 }
 
 .checkboxStyle[type="checkbox"] {
   appearance: none;
   -webkit-appearance: none;
-  width: 20px;
-  height: 20px;
+  width: 20px !important;
+  height: 20px !important;
   border: 2px solid rgba(0, 147, 121, 1);
   border-radius: 4px;
   cursor: pointer;
@@ -144,8 +147,8 @@
 .roundedInput[type="radio"] {
   appearance: none;
   -webkit-appearance: none;
-  width: 24px;
-  height: 24px;
+  width: 24px !important;
+  height: 24px !important;
   border: 2px solid rgba(0, 147, 121, 1);
   border-radius: 50%;
   cursor: pointer;
@@ -224,13 +227,15 @@ label {
 
   .filter {
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
   }
 
   .applybtn {
     position: static;
     margin-top: 20px;
-    text-align: center;
+  }
+  .filterContentWidth {
+    width: 290px;
   }
 }
 
@@ -265,39 +270,54 @@ label {
 
   .title {
     font-size: 16px;
-    text-align: center;
   }
 
   .filter {
     flex-direction: column;
-    align-items: center;
     gap: 10px;
   }
 
-  .filterTitle {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .applybtn {
-    width: 100%;
-    text-align: center;
-  }
 }
 .searchReasult {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  justify-content: center;
 }
 .studDiv {
   display: flex;
   flex-direction: row;
   font-family: "Poppins";
-  gap: 10px
-
+  gap: 10px;
 }
 
 .content {
   width: 450px;
+}
+
+.resultList {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.uniCard {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  font-family: "Poppins";
+  justify-content: center;
+  cursor: pointer;
+}
+
+.uniLogoImg {
+  width: 20%;
+  height: 200px;
+}
+
+.info {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
