--- a/src/assets/styles/universitySpeciality.module.css
+++ b/src/assets/styles/universitySpeciality.module.css
@@ -1,11 +1,12 @@
 .mainDiv {
-  padding-left: 80px;
+  height: 93vh;
 }
 
 .path {
   display: flex;
   gap: 8px;
   align-items: center;
+  margin-top: 20px;
 }
 .path hr {
   height: 22px;
@@ -23,14 +24,18 @@
 .uniInfoMainContainer {
   height: 637px;
   position: relative;
+  width: fit-content;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
 .unibox {
   display: flex;
   flex-direction: row;
   gap: 35px;
-  position: absolute;
-  top: 90px;
-  right: 80px;
+  display: flex;
+  justify-content: center;
 }
 .uniImg {
   width: 620px;
@@ -39,9 +44,7 @@
 }
 
 .Title h1 {
-  display: flex;
   gap: 275px;
-  align-items: center;
   font-weight: 600;
   font-size: 38px;
   line-height: 64px;
@@ -88,7 +91,6 @@
   letter-spacing: 0px;
   color: rgba(98, 98, 100, 1);
   height: 160px;
-  
 }
 
 .slider {
@@ -103,5 +105,4 @@
   color: rgba(0, 147, 121, 1);
   text-decoration: underline;
   text-underline-offset: 8px; /* Adjust this value as needed */
-
 }
