--- a/src/assets/styles/Profile.module.css
+++ b/src/assets/styles/Profile.module.css
@@ -213,7 +213,9 @@ h1 {
   padding: 20px;
   border-radius: 16px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-  width: 40%;
+  width: 100%;
+  max-width: 820px;
+  min-width: 310px;
   height: fit-content;
   text-align: center;
 }
