--- a/src/assets/styles/OneUniversity.module.css
+++ b/src/assets/styles/OneUniversity.module.css
@@ -4,54 +4,54 @@ p {
 }
 
 .uniInfoMainContainer {
-  height: 637px;
+  width: 90%;
   position: relative;
+  margin: auto;
 }
 .unibox {
   display: flex;
   flex-direction: row;
-  gap: 35px;
-  position: absolute;
-  top: 90px;
-  left: 200px;
-  right: 80px;
+  justify-content: center;
+  width: 100%;
+  gap: 30px;
 }
 .uniImg {
-  width: 620px;
+  width: 50%;
   height: 457px;
   border-radius: 20px;
+  object-fit: cover;
+}
+.mainContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 40px;
+  width: 50%;
+}
+.infoDiv {
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
 }
 
 .Title {
   display: flex;
-  gap: 275px;
-  align-items: center;
+  justify-content: space-between;
+}
+.Title h1 {
+  font-family: "Poppins";
   font-weight: 600;
-  font-size: 38px;
-  line-height: 64px;
-  letter-spacing: -2%;
+  font-size: 32px;
+  width: 400px;
 }
-
-.rate {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.rate p {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  letter-spacing: 0%;
-  color: rgba(98, 98, 100, 1);
-}
-
 .starRateGive {
   width: 24px;
   height: 24px;
 }
 
 .review {
-  width: 907px;
+  width: 100%;
   height: 60px;
   border-radius: 20px;
   border-width: 1px;
@@ -69,7 +69,7 @@ p {
 }
 
 .postBtn {
-  width: 178px;
+  width: 200px;
   height: 60px;
   border-radius: 20px;
   gap: 8px;
@@ -81,3 +81,41 @@ p {
   color: white;
   border: none;
 }
+.inputMessageDiv {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+@media (max-width: 768px) {
+  .unibox {
+    flex-direction: column;
+    align-items: center;
+  }
+  .uniImg {
+    width: 90%;
+    height: 350px;
+  }
+  .mainContent {
+    justify-content: flex-start;
+    width: 90%;
+  }
+
+  .infoDiv {
+    width: 100%;
+  }
+  
+}
+
+
+@media (max-width: 425px) {
+
+ .inputMessageDiv {
+  flex-direction: column;
+  gap: 20px;
+ }
+ .postBtn {
+  width: 100%;
+ }
+
+}
+
