--- a/src/assets/styles/PriceRangeFilter.module.css
+++ b/src/assets/styles/PriceRangeFilter.module.css
@@ -140,3 +140,14 @@ span {
   position: absolute;
   left: 10px;
 }
+
+@media (max-width: 480px) {
+
+  .minInput,
+  .maxInput {
+    min-width: 110px;
+  }
+  .rangeSlider {
+    width: 90%;
+  }
+}
