--- a/src/assets/styles/universitySpeciality.module.css
+++ b/src/assets/styles/universitySpeciality.module.css
@@ -1,5 +1,6 @@
 .mainDiv {
-  height: 93vh;
+  width: 90%;
+  margin: auto;
 }
 
 .path {
@@ -7,7 +8,9 @@
   gap: 8px;
   align-items: center;
   margin-top: 20px;
+  flex-wrap: wrap; 
 }
+
 .path hr {
   height: 22px;
   border: 1px solid black;
@@ -19,90 +22,49 @@
   line-height: 24px;
   letter-spacing: 0%;
   vertical-align: middle;
+  white-space: nowrap;
 }
 
-.uniInfoMainContainer {
-  height: 637px;
-  position: relative;
-  width: fit-content;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
+.activePath {
+  color: rgba(0, 147, 121, 1);
+  font-weight: 600;
 }
+
 .unibox {
   display: flex;
-  flex-direction: row;
   gap: 35px;
-  display: flex;
-  justify-content: center;
 }
+
 .uniImg {
-  width: 620px;
-  height: 457px;
+  width: 50%;
+  object-fit: cover;
   border-radius: 20px;
+  height: 50%;
+}
+.Title {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
 .Title h1 {
-  gap: 275px;
+  font-family: "Poppins";
   font-weight: 600;
   font-size: 38px;
-  line-height: 64px;
-  letter-spacing: -2%;
 }
-
 .Title p {
+  font-family: "Poppins";
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: 0px;
   color: rgba(98, 98, 100, 1);
 }
-
-.specDetails div p {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0%;
-  vertical-align: middle;
-  color: rgba(45, 45, 45, 1);
-  position: relative;
-}
-.specDetails h4 {
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 100%;
-  letter-spacing: -2%;
-}
-
-.descriptinSectionDiv {
-  width: 90%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  margin-bottom: 52px;
-}
-
-.descriptionParagraph {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0px;
-  color: rgba(98, 98, 100, 1);
-  height: 160px;
-}
-
-.slider {
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 24px;
-  letter-spacing: 0%;
-  text-align: center;
-}
-
-.sliderActive {
-  color: rgba(0, 147, 121, 1);
-  text-decoration: underline;
-  text-underline-offset: 8px; /* Adjust this value as needed */
+@media (max-width: 768px) {
+  .unibox {
+    flex-direction: column;
+  }
+  .uniImg {
+    width: 100%;
+    height: 100%;
+  } 
 }
