add auth for admin panel, fix the forum

--- a/src/assets/styles/SideBar.module.css
+++ b/src/assets/styles/SideBar.module.css
@@ -76,6 +76,9 @@
   font-size: 14px;
   font-weight: 400;
   color: rgba(170, 171, 175, 1);
+  width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .logoutIcon {
