--- a/src/assets/styles/SideBar.module.css
+++ b/src/assets/styles/SideBar.module.css
@@ -8,10 +8,7 @@
   border-bottom-right-radius: 25px;
   justify-content: space-between;
   padding: 40px 20px;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
+  height: 100%;
 }
 
 .navigations {
