add search forum, changes in admin side

--- a/src/assets/styles/Dashboard.module.css
+++ b/src/assets/styles/Dashboard.module.css
@@ -58,7 +58,14 @@
   justify-content: space-between;
   align-items: center;
 }
+.uniName {
+  width: 230px;
+  white-space: nowrap; 
+  overflow: hidden;
+  text-overflow: clip; 
 
+
+}
 .desc {
   font-family: "Inter";
   font-weight: 500;
